--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "deep-object-diff": "^1.1.0",
+    "firebase": "^8.3.0",
     "formik": "^2.2.6",
     "framer-motion": ">=3.0.0",
     "http-proxy-middleware": "^1.0.6",
