--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -10,7 +10,8 @@
     "typeRoots": ["./functions/node_modules/@types"],
     "skipLibCheck": true,
     "baseUrl": ".",
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "resolveJsonModule": true
   },
   "compileOnSave": true,
   "include": [
