--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "framer-motion": ">=3.0.0",
     "http-proxy-middleware": "^1.0.6",
     "immer": "^8.0.1",
+    "query-string": "^6.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
     "react-redux": "^7.2.2",
+    "react-redux-firebase": "^3.10.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "redux": "^4.0.5",
