--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,9 @@ yarn-error.log*
 ui-debug.log*
 firebase-debug.log*
 firestore-degug.log*
-database-debug.log*
+database-debug.log
 
 .runtimeconfig.json*
 smptefy-firebase-adminsdk*
+.gitignore
+firestore-debug.log
