--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "webmidi": "^2.5.1"
   },
   "scripts": {
-    "start": "react-scripts start && firebase emulators:start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
